# local-transcribe

./: PLAN.md  README.md  index.html  package-lock.json  package.json  prd.json  progress.txt
scripts/: build-release.sh
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  history.json  settings.json
src-tauri/src/: config.rs  history.rs  lib.rs  main.rs  state.rs  tray.rs  vocabulary.rs
src-tauri/src/audio/: capture.rs  levels.rs  mod.rs  resampler.rs
src-tauri/src/input/: paste.rs
src-tauri/src/transcription/: mod.rs  model_manager.rs  whisper.rs
src-tauri/src/translation/: engine.rs  mod.rs  model_manager.rs
src/components/: AudioWaveform.tsx  HistoryView.tsx  ModelSettings.tsx  Overlay.tsx  PulseAnimation.tsx  Settings.tsx  VocabularyModal.tsx
src/hooks/: useAudioLevels.ts  useDictationState.ts
src/styles/: globals.css
tasks/: prd-dictate.md  prd-wren.md
