[package]
name = "dictate"
version = "0.1.0"
description = "Dictate - Free local voice-to-text dictation app"
authors = ["you"]
edition = "2021"

[lib]
name = "dictate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2.3"
whisper-rs = { version = "0.15", features = ["metal"] }
cpal = "0.17"
arboard = "3.6"
enigo = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
futures-util = "0.3"
dirs = "6"
parking_lot = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
